# users/handlers/user_handler.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"database/sql"
 	"encoding/json"
 	"net/http"
 	"pharmacie-api/auth"
@@ -10,10 +11,10 @@ import (
 )
 
 // @Summary Inscription d'un utilisateur
-// @Description permet de s'inscrire en remplissant les champs
+// @Description Permet de s'inscrire en remplissant les champs
 // @Tags User
-// @Succes 201 {string} string "Utilisateur créé"
-// @Faillure 400 {string} string "Données invalides"
+// @Success 201 {string} string "Utilisateur créé"
+// @Failure 400 {string} string "Données invalides"
 // @Router /user [post]
 func AjouterUser(response http.ResponseWriter, request *http.Request) {
 	var newUser models.User
@@ -38,6 +39,11 @@ func AjouterUser(response http.ResponseWriter, request *http.Request) {
 	}
 }
 
+// @Summary Afficher les utilisateurs
+// @Description Permet d'afficher la liste de tous les utilisateurs
+// @Tags User
+// @Produce json
+// @Router /user [get]
 func ListerUser(response http.ResponseWriter, request *http.Request) {
 	user, err := services.ListerUserService()
 	if err != nil {
@@ -45,7 +51,7 @@ func ListerUser(response http.ResponseWriter, request *http.Request) {
 		return
 	}
 
-	response.Header().Set("Content-Type", "applicatio/json")
+	response.Header().Set("Content-Type", "application/json")
 	response.WriteHeader(http.StatusOK)
 	err = json.NewEncoder(response).Encode(user)
 	if err != nil {
@@ -57,11 +63,11 @@ func ListerUser(response http.ResponseWriter, request *http.Request) {
 // @Summary Connexion utilisateur
 // @Description Permet à un utilisateur de se connecter
 // @Tags Auth
-// @Router /login [post]
-// @Success 200 {string} string "Connexion réussie"
-// @Failure 401 {string} string "Email ou mot de passe incorrect"
 // @Accept json
 // @Produce json
+// @Success 200 {string} string "Connexion réussie"
+// @Failure 401 {string} string "Email ou mot de passe incorrect"
+// @Router /login [post]
 func ConnexionUser(response http.ResponseWriter, request *http.Request) {
 	var user models.User
 	err := json.NewDecoder(request.Body).Decode(&user)
@@ -95,6 +101,12 @@ func ConnexionUser(response http.ResponseWriter, request *http.Request) {
 
 }
 
+// @Summary Supprimer un utilisateur
+// @Description Permet à l'administrateur de supprimer un utilisateur
+// @Tags User
+// @Success 200 {string} string "Utilisateur supprimé avec succès"
+// @Failure 400 {string} string "Id invalide"
+// @Router /user/{id} [delete]
 func SupprimerUser(response http.ResponseWriter, request *http.Request) {
 	chemin := request.PathValue("id")
 	id, err := strconv.Atoi(chemin)
@@ -119,6 +131,12 @@ func SupprimerUser(response http.ResponseWriter, request *http.Request) {
 
 }
 
+// @Summary Modifier le rôle
+// @Description Permet à l'admin de modifier le rôle d'un utilisateur
+// @Tags User
+// @Success 200 {string} string "Rôle modifié avec succès"
+// @Failure 400 {string} string "Données invalides"
+// @Router /user/{id} [patch]
 func ModifierRole(response http.ResponseWriter, request *http.Request) {
 	chemin := request.PathValue("id")
 
@@ -149,4 +167,40 @@ func ModifierRole(response http.ResponseWriter, request *http.Request) {
 	json.NewEncoder(response).Encode(map[string]string{
 		"message": "Rôle modifié avec succès",
 	})
+}
+
+// @Summary Afficher user
+// @Description Permet à l'admin et le pharmacien d'afficher un utilisateur
+// @Tags User
+// @Success 200 {string} string "[user]"
+// @Failure 400 {string} string "Id invalide"
+// @Router /user/{id} [get]
+func AfficherUser(response http.ResponseWriter, request *http.Request) {
+	chemin := request.PathValue("id")
+	id, err := strconv.Atoi(chemin)
+	if err != nil {
+		http.Error(response, "Id invalide", http.StatusBadRequest)
+		return
+	}
+
+	afficherUser, err := services.AfficherUserServices(id)
+	if err != nil {
+		if err == sql.ErrNoRows {
+			http.Error(response, "Utilisateur non trouvé", http.StatusNotFound)
+			return
+		}
+
+		http.Error(response, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	response.Header().Set("Content-Type", "application/json")
+	response.WriteHeader(http.StatusOK)
+
+	err = json.NewEncoder(response).Encode(afficherUser)
+	if err != nil {
+		http.Error(response, "Erreur du json", http.StatusInternalServerError)
+		return
+	}
+
 }
